Undebugged implementation for ItemLikeService, use in ItemsService.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -71,6 +71,7 @@
   <script src="static/app/base/clampDirective.js"></script>
   <script src="static/app/base/DrawerService.js"></script>
   <script src="static/app/base/ExtendedItemService.js"></script>
+  <script src="static/app/base/ItemLikeService.js"></script>
   <script src="static/app/base/ModalService.js"></script>
   <script src="static/app/base/SwiperService.js"></script>
   <script src="static/app/base/swiperClickDirective.js"></script>
