--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -78,8 +78,8 @@
         </div>
 
         <footer ng-hide="isTaskFooterHidden(editorFooterHiddenCallback)"
-          class="container-content--after editor-footer" editor-footer="basicSlideInfo"
-          editor-footer-start-expanded>
+          class="container-content--after editor-footer animate-fade-in" editor-footer="basicSlideInfo"
+          editor-footer-ios-click editor-footer-start-expanded>
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
               <a href class="icon-downplayed" ng-click="toggleExpand()">
