Expanded footer in task editor is now closed instead of hidden when when title is focused. Fixed a bug with ng-hide using animation delay defined in .animate-editor-footer-close.

--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -19,8 +19,8 @@
           <textarea ng-hide="isTaskTitleClamped()" ng-model="titlebar.text"
             ng-keydown="taskTitlebarTextKeyDown($event)" editable-field
             editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
-            editable-field-blur="setTitleBarBlur()" editable-field-focus="setTitleBarFocus()"
-            msd-elastic dynamic-placeholder="enter task title&#8230;" maxlength="128">
+            editable-field-focus="setTitleBarFocus()" msd-elastic
+            dynamic-placeholder="enter task title&#8230;" maxlength="128">
           </textarea>
           <div ng-if="isTaskTitleClamped()">
             <span ng-class="{'text-downplayed': !titlebar.text}" class="text-clamped" ng-bind="titlebar.text ? titlebar.text : 'enter task title&#8230;'" clamp=2></span>
