Fixed FastClick source path in index_devel.html, pom.xml and wro.xml. See 1c690fe6d4e99ac2fcce2e7485e6391ec138c35d.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -34,8 +34,8 @@
   <script src="static/lib/base64.js"></script>
   <script src="static/lib/elastic.js"></script>
   <script src="static/lib/clamp.js"></script>
-  <script src="static/lib/fastclick.js"></script>
 
+  <script src="static/common/fastclick.js"></script>
   <script src="static/common/common.js"></script>
   <script src="static/common/DateService.js"></script>
   <script src="static/common/DetectBrowserService.js"></script>
