Remove possibility to add more than one task during tutorial. Removed save task on click elsewhere.

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -4,7 +4,7 @@
   </a>
 
   <div class="group-symmetrical--middle">
-    <a href ng-click="addItem()">
+    <a href ng-hide="isFooterAddItemHidden()" ng-click="addItem()">
       <span class="icon-plus"></span>
     </a>
   </div>
