When clicking or swiping back from note editor during tutorial, return to tutorial instead of all notes.

--- a/frontend/core/src/main/webapp/static/app/notes/notesAll.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesAll.html
@@ -2,7 +2,7 @@
   <section class="container-content" list="allNotes" list-recent
     list-open="openEditor('note', {trans: {favorited: false, itemType: 'note'}})"
     ng-init="setListOnboarding('notes', listOnboarding)">
-    <div ng-show="isOnboarded('notes') || isListOnboardingLockedOrReleased('notes')">
+    <div ng-show="isOnboarded('notes')">
       <h2 class="group-heading justified row">all notes</h2>
       <div class="animate-list-item-leave tall"
         ng-repeat="note in listInfos.array = (getFullArray()) | orderBy:'modified':true
@@ -11,7 +11,8 @@
     </div>
 
     <!-- ONBOARDING -->
-    <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', undefined)" class="group-instruction">
+    <div ng-if="!isOnboarded('notes') && (checkListOnboardingLock('notes', undefined) ||
+      checkListOnboardingLock('notes', 'on'))" class="group-instruction">
       <h2 class="group-heading instruction long row">what do you want to
         <span class="highlighted">remember</span>?
       </h2>
