--- a/frontend/core/src/main/webapp/static/app/notes/notesAll.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesAll.html
@@ -25,9 +25,10 @@
         <span class="highlighted">note</span> created!
       </h2>
       <div class="textgroup-ingress row">make your way to
-      <a href class="highlighted" ng-click="changeFeature('lists', undefined, true)">
-        <span>lists</span>
-      </a> by using the menu</div>
+        <a href class="highlighted" ng-click="changeFeature('lists', undefined, true)">
+          <span>lists</span>
+        </a> by using the menu
+      </div>
     </div>
 
   </section>
