--- a/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
@@ -36,6 +36,7 @@
     </button>
   </footer>
 </form>
+
 <div ng-if="entryState === 'signup'">
   <section class="container-content">
     <header class="group-symmetrical">
@@ -47,4 +48,4 @@
       <div class="group-html-external row" ng-bind-html="details.html"></div>
     </div>
   </section>
-</form>
+</div>
