Tutorial copy update.

--- a/frontend/core/src/main/webapp/static/app/entry/tutorial.html
+++ b/frontend/core/src/main/webapp/static/app/entry/tutorial.html
@@ -5,8 +5,10 @@
     </a>
   </header>
   <div class="group-instruction">
-    <h2 class="group-heading instruction row">learn how to use extended mind</h2>
-    <div class="textgroup-ingress row">it takes less than three minutes to learn the basics</div>
+    <h2 class="group-heading instruction row">let's get started with
+      <span class="highlighted">extended mind</span>
+    </h2>
+    <div class="textgroup-ingress row">it takes less than three minutes</div>
   </div>
 </section>
 <footer class="container-content--after group-btn">
