--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -15,9 +15,10 @@
 
     <!-- ONBOARDING -->
     <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', undefined)" class="group-instruction">
-      <h2 class="group-heading instruction row">link tasks and notes with <span class="highlighted">lists</span>
+      <h2 class="group-heading instruction row">use
+        <span class="highlighted">lists</span> to group tasks and notes
       </h2>
-      <div class="textgroup-ingress row">add a new or ongoing <span class="text-highlighted">project</span> or
+      <div class="textgroup-ingress row">add a <span class="text-highlighted">project</span> or
       <span class="text-highlighted">responsibility</span> by hitting the plus sign</div>
     </div>
     <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', 'off')" class="group-instruction">
