--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,7 +1,7 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
   <section class="container-content" list="contexts" swiper-prevent>
     <h2 class="group-heading justified row">contexts</h2>
-    <div list-item-add="{tagType:'context'}" list-item-add-save="saveContext(newItem)">
+    <div list-item-add="getNewContext()" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed swiper-no-swiping"
         data-snap-ignore="true" editable-field-container
         editable-field-container-clicked-elsewhere="clickedElsewhere()"
