--- a/frontend/core/src/main/webapp/static/app/lists/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listNotes.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container>
   <section class="container-content" list="allNotes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}"
-    list-open="openEditor('note', getNewNote({list:list.uuid})" swiper-prevent>
+    list-open="openEditor('note', getNewNote({list:list.uuid}))" swiper-prevent>
     <h2 class="group-heading justified row">notes</h2>
 
     <div class="animate-list-item-leave tall"
