--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -3,27 +3,31 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endTaskEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !task.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
+            ng-bind="taskTitlebarHasText() && !task.deleted ? 'save' : 'back'"></span>
         </a>
         <a href ng-if="!task.deleted" class="group-symmetrical--right" ng-click="deleteTaskInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a href ng-if="task.deleted" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteTask(task)"><span class="text-navigation">restore</span></a>
+        <a href ng-if="task.deleted" class="group-symmetrical--right link-navigation highlighted active"
+          ng-click="undeleteTask(task)"><span class="text-navigation">restore</span></a>
       </div>
 
       <form role="form" class="group-mixed with-checkbox" autocapitalize="none" autocorrect="off">
         <div class="group-mixed--left">
-          <input type="checkbox" ng-click="clickCompleteTaskInEdit()" ng-checked="task.trans.completed" ng-model="task.trans.completed" icon-checkbox="editorTitlebarCheckbox" />
+          <input type="checkbox" ng-click="clickCompleteTaskInEdit()" ng-checked="task.trans.completed"
+            ng-model="task.trans.completed" icon-checkbox="editorTitlebarCheckbox" />
         </div>
         <div class="group-mixed--middle">
-          <textarea ng-hide="isTaskTitleClamped()" ng-model="titlebar.text"
+          <textarea ng-hide="isTaskTitleClamped()" ng-model="task.trans.title"
             ng-keydown="taskTitlebarTextKeyDown($event)" editable-field
             editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
             editable-field-focus="setTitleBarFocus()" msd-elastic
             dynamic-placeholder="enter task title&#8230;" maxlength="128">
           </textarea>
           <div ng-if="isTaskTitleClamped()">
-            <span ng-class="{'text-downplayed': !titlebar.text}" class="text-clamped" ng-bind="titlebar.text ? titlebar.text : 'enter task title&#8230;'" clamp=2></span>
+            <span ng-class="{'text-downplayed': !task.trans.title}" class="text-clamped"
+              ng-bind="task.trans.title ? task.trans.title : 'enter task title&#8230;'" clamp=2></span>
           </div>
         </div>
       </form>
