--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -3,20 +3,25 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endNoteEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !note.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
+            ng-bind="noteTitlebarHasText() && !note.deleted ? 'save' : 'back'"></span>
         </a>
-        <div ng-hide="onboardingInProgress" ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large animate-fade-in-out">
+        <div ng-hide="onboardingInProgress" ng-if="mode === 'fullScreen'"
+          class="group-symmetrical--middle width-large animate-fade-in-out">
           <a href class="link-navigation downplayed" ng-click="toggleNoteEditMode()">
             <span class="text-navigation">note settings</span>
           </a>
         </div>
-        <a href ng-if="!note.deleted && !onboardingInProgress" class="group-symmetrical--right" ng-click="deleteNoteInEdit()"><span class="icon-trash"></span></a>
-        <a href ng-if="note.deleted && !onboardingInProgress" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
+        <a href ng-if="!note.deleted && !onboardingInProgress" class="group-symmetrical--right"
+          ng-click="deleteNoteInEdit()"><span class="icon-trash"></span></a>
+        <a href ng-if="note.deleted && !onboardingInProgress"
+          class="group-symmetrical--right link-navigation highlighted active"
+          ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
       </div>
 
       <!-- NOTE TITLE -->
       <div ng-hide="hideNoteTitle && isOnboarded('notes')" class="row-vertically-centered with-textarea">
-        <textarea ng-hide="isTitleClamped()" class="text-heading-primary" ng-model="titlebar.text"
+        <textarea ng-hide="isTitleClamped()" class="text-heading-primary" ng-model="note.trans.title"
           ng-keydown="noteTitlebarTextKeyDown($event)" ng-focus="noteTitleFocused()" editable-field
           editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
           dynamic-placeholder="enter note title&#8230;" maxlength="128"
@@ -24,15 +29,16 @@
         </textarea>
 
         <div ng-if="isTitleClamped()">
-          <span class="text-heading-primary" ng-class="{'text-downplayed': !titlebar.text}" ng-bind="titlebar.text ? titlebar.text : 'enter note title&#8230;'" clamp=2></span>
+          <span class="text-heading-primary" ng-class="{'text-downplayed': !note.trans.title}"
+            ng-bind="note.trans.title ? note.trans.title : 'enter note title&#8230;'" clamp=2></span>
         </div>
       </div>
 
       <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', 'on')">
-        <div ng-show="!titlebar.text || titlebar.text.length === 0" class="text-details row">
+        <div ng-show="!noteTitlebarHasText()" class="text-details row">
           e.g. reading suggestions, budget meeting minutes, summer plans
         </div>
-        <div ng-show="titlebar.text.length && !hideNoteTitle" class="text-details row">when done, hit return</div>
+        <div ng-show="noteTitlebarHasText() && !hideNoteTitle" class="text-details row">when done, hit return</div>
        </div>
      </div>
    </header>
@@ -57,7 +63,7 @@
 
             <!-- URL -->
             <div ng-hide="mode === 'fullScreen'" class="row-vertically-centered with-textarea">
-              <textarea ng-model="note.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
+              <textarea ng-model="note.trans.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
                 autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
@@ -65,14 +71,14 @@
             <!-- CONTENT -->
             <div class="row-vertically-centered with-textarea">
               <textarea ng-class="(!isOnboarded('notes') && checkListOnboardingLock('notes', 'on') && !hideNoteTitle) && 'input-separate'"
-                ng-model="note.content" msd-elastic ng-focus="noteContentFocused()" editable-field
+                ng-model="note.trans.content" msd-elastic ng-focus="noteContentFocused()" editable-field
                 editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)"
                 placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
 
             <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', 'on')">
-              <div ng-if="note.content.length" class="text-details row">when done, save your note by
+              <div ng-if="note.trans.content.length" class="text-details row">when done, save your note by
                 clicking 'save' in the top-left corner or swipe left
               </div>
             </div>
